--- a/css/_common.css
+++ b/css/_common.css
@@ -19,7 +19,7 @@
   margin-bottom: 5px !important;
   padding: 1em !important;
   background-color: transparent;
-  line-height: 125%%;
+  line-height: 125%;
 }
 
 .raw {
