toolbar right alignment

--- a/css/_common.css
+++ b/css/_common.css
@@ -4,6 +4,11 @@
   position: relative;
 } 
 
+.tools .wrap {
+  float: right;
+  position: relative;
+}
+
 .tools a {
   font-size: 12px;
   text-decoration: none;
